Adjusting display values in hamburger-menu-stylesheet.css - The links for the mobile devices were still displaying despite them not being visible causing pointer-events which has now been fixed with a display: none; until the input box is checked.

--- a/hamburger-menu-stylesheet.css
+++ b/hamburger-menu-stylesheet.css
@@ -31,10 +31,10 @@
     height: 5px;
     background-color: var(--heading-large-text-colour);
     border-radius: 999px;
-    outline: none;
-    border: 0;
+    /* outline: none; */
+    /* border: 0;
+    z-index: 1; */
     pointer-events: none;
-    z-index: 1;
 
     left: 0;
     right: 0;
@@ -59,10 +59,7 @@
 
 @media (max-width: 700px){
 
-    .hamburger-menu-label{
-        display: flex;
-    }
-
+    .hamburger-menu-label,
     .hamburger-menu-input,
     .hamburger-menu-input::before,
     .hamburger-menu-input::after{
@@ -72,7 +69,7 @@
     .header-list-links{
         background-color: rgb(41, 41, 41);
 
-        display: flex;
+        display: none;
         flex-direction: column;
         
         width: 150px;
@@ -107,7 +104,7 @@
 
         & a::before{
             content: "";
-            display: inline-block;
+            /* display: inline-block; */
 
             background-image: url(bullet-points-inkscape.svg);
             background-size: contain;
@@ -139,8 +136,9 @@
     }
 
     .hamburger-menu-input:checked ~ .header-list-links{
-        opacity: 1;
+        display: flex;
 
+        opacity: 1;
         transition: opacity 0.2s linear;
     }
 
